--- a/js/index.html
+++ b/js/index.html
@@ -9,11 +9,8 @@
     </title>
 </head>
 <body>
-    <script>
-        console.log("greeting from javascript");
-        console.log("greeting from javascript !!!");
-        console.log("greeting from embedded javascript !!!");
-        console.log(2 + 2);
+    <script src="index.js">
     </script>
+    <script src="other.js"></script>
 </body>
 </html>
